@@ -2261,6 +2261,118 @@ expr_stmt|;
 block|}
 block|}
 block|}
+comment|// HBASE-1781
+specifier|public
+name|void
+name|testStackOverflow
+parameter_list|()
+block|{
+name|int
+name|maxVersions
+init|=
+literal|1
+decl_stmt|;
+name|ColumnTracker
+name|wild
+init|=
+operator|new
+name|WildcardColumnTracker
+argument_list|(
+name|maxVersions
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|100000
+condition|;
+name|i
+operator|+=
+literal|2
+control|)
+block|{
+name|byte
+index|[]
+name|col
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"col"
+operator|+
+name|i
+argument_list|)
+decl_stmt|;
+name|wild
+operator|.
+name|checkColumn
+argument_list|(
+name|col
+argument_list|,
+literal|0
+argument_list|,
+name|col
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+block|}
+name|wild
+operator|.
+name|update
+argument_list|()
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|1
+init|;
+name|i
+operator|<
+literal|100000
+condition|;
+name|i
+operator|+=
+literal|2
+control|)
+block|{
+name|byte
+index|[]
+name|col
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"col"
+operator|+
+name|i
+argument_list|)
+decl_stmt|;
+name|wild
+operator|.
+name|checkColumn
+argument_list|(
+name|col
+argument_list|,
+literal|0
+argument_list|,
+name|col
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 
